# MayohigaLab

./: .gitignore  Dockerfile  Makefile  Manifest.toml  Project.toml  README.md  _quarto.yml  docker-compose.yml  pyproject.toml
docs/: 404.html  index.html  listings.json  search.json
docs/qmds/: about.html  books.html  contact.html  deliverables.html  index.html  posts.html
docs/qmds/book/: 0001_docker_system.html  test.html
docs/qmds/posts/20250202_docker_system/: index.html
docs/qmds/posts/20250209_imbalance_evalution/: experiment-preview.html  experiment.html  (+3 more)
docs/site_libs/bootstrap/: bootstrap-0a42c5c7ba6c13cd9b2d23f80ebb7e6b.min.css  bootstrap-571e8fcad410dc8fbd4da68b2e86e762.min.css  bootstrap-5a8d40e9d772ddbd39938f739f814efa.min.css  bootstrap-e318aba3de9835bf43d169d76fa34fb5.min.css  bootstrap-fb112cd685da295e1e053fad35b30292.min.css
qmds/: about.qmd  books.qmd  contact.qmd  deliverables.qmd  index.qmd  posts.qmd
qmds/book/: 0001_docker_system.qmd
qmds/posts/20250202_docker_system/: index.qmd
qmds/posts/20250209_imbalance_evalution/: experiment.ipynb  index.qmd
qmds/posts/20250209_virus_simulation_1/: index.qmd  simulation.ipynb
qmds/posts/20250303_compatibility_interval/: index.qmd
qmds/posts/20250315_virus_simulation_2/: index.qmd  simulation.ipynb
qmds/posts/draft_compatibility_interval/: index.qmd  theory.ipynb
qmds/posts/draft_imbalance_evalution/: experiment.ipynb  index.qmd
qmds/posts/draft_maltico_regression/: experiment.ipynb  index.qmd
qmds/posts/draft_virus_simulation_2/: index.qmd  simulation.ipynb
src/: src_jl.jl
(+26 files in other folders)
